edited temp button

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Web Breakz</title>
-//    <meta name="google-signin-scope" content="profile email">
-//    <meta name="google-signin-client_id" content="565004978261-933585o6bbkfotthakk2ms20g6jnotu5.apps.googleusercontent.com">
-//    <script src="https://apis.google.com/js/platform.js" async defer></script>
-//    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Share+Tech|VT323|Warnes" rel="stylesheet">
+    <title>wEb brEaKz</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Share+Tech|VT323|Warnes" rel="stylesheet">
   </head>
   <body>
-
     <center>
     <h1>Welcome to Web Breakz</h1>
+    <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
+    <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
+
+    <button onclick='$.playSound("http://www.noiseaddicts.com/samples_1w72b820/3724")'>Example Sound Play</button>
+    </script>
     <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
     </center>
   </body>
