--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <title>wEb brEaKz</title>
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Share+Tech|VT323|Warnes" rel="stylesheet">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link rel="stylesheet" href="web-breakz/static/home.css"/>
+    <style type="text/css">a {text-decoration: none}</style>
   </head>
   <body>
     <center>
-    <h1>Welcome to Web Breakz</h1>
+    <h1 id="title">Welcome to Web Breakz</h1>
 
     <!-- temp button w/ sound -->
     <!-- <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
@@ -17,20 +19,20 @@
     </script> -->
 
     <!-- temp alert with timeout -->
-    <script>
+    <!-- <script>
     function play() {
             var audio = document.getElementById("audio");
             audio.play();
             setTimeout(function(){alert("Extraction is finished");},10);
         }
-    </script>
+    </script> -->
 
     <!-- alert when page loads -->
-    <script>
+    <!-- <script>
       $(document).ready(function(){
         alert('Ready to take some breakz?');
       });
-    </script>
+    </script> -->
 
     <!-- info about web app -->
     <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
