--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -4,6 +4,7 @@
     <title>wEb brEaKz</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
     <link rel="stylesheet" href="web-breakz/static/home.css"/>
     <style type="text/css">a {text-decoration: none}</style>
   </head>
@@ -28,11 +29,11 @@
     </script> -->
 
     <!-- alert when page loads -->
-    <!-- <script>
+    <script>
       $(document).ready(function(){
         alert('Ready to take some breakz?');
       });
-    </script> -->
+    </script>
 
     <!-- info about web app -->
     <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
