started playing around with css

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -5,7 +5,10 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
-    <link rel="stylesheet" href="web-breakz/static/home.css"/>
+    <link rel="stylesheet" href="static/home.css"/>
+    <style>
+@import url('https://fonts.googleapis.com/css?family=Bungee+Hairline|Covered+By+Your+Grace|Fjalla+One|Josefin+Slab|Monda|Oswald|Permanent+Marker|Rokkitt|Scope+One|Sintony|Source+Code+Pro|Ubuntu+Condensed|Ubuntu+Mono');
+</style>
     <style type="text/css">a {text-decoration: none}</style>
   </head>
   <body>
@@ -36,7 +39,7 @@
     </script>
 
     <!-- info about web app -->
-    <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
+    <h4 id="message">We want you to take breakz from the interwebs. Don't get us mad.</h4>
     </center>
   </body>
 </html>
