--- a/web-breakz/static/home.css
+++ b/web-breakz/static/home.css
@@ -1,9 +1,13 @@
 #title {
   color: #ff4d4d;
   font-family: 'VT323', monospace;
-  font-size: 25px;
+  font-size: 80px;
 }
 
+#message{
+  font-family: 'Oswald', sans-serif;
+  font-size: 15px;
+}
 /*#me {
 border-style: solid;
 border-width: 5px;
@@ -130,6 +134,6 @@ body {*/
 /* background-image: url("sootspirits.png") */
 /*    background-color: lightblue; */
 /*background-image: url("weirdDesignPastel.jpg");*/
-background-image: url("pastelTriangles.jpg");
+/*background-image: url("pastelTriangles.jpg");
 background-attachment: fixed;
 }*/
