--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -29,11 +29,11 @@
     </script> -->
 
     <!-- alert when page loads -->
-    <script>
+    <!-- <script>
       $(document).ready(function(){
         alert('Ready to take some breakz?');
       });
-    </script>
+    </script> -->
 
     <!-- info about web app -->
     <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
