added html to support favicon

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="web-breakz/static/home.css"/>
     <style type="text/css">a {text-decoration: none}</style>
   </head>
