--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
     <link rel="stylesheet" href="web-breakz/static/home.css"/>
     <style type="text/css">a {text-decoration: none}</style>
+    <link rel="python" href="web-breakz/main.py"/>
+    <script src="static/timer.js"></script>    
   </head>
   <body>
     <center>
