added random button

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -40,5 +40,6 @@
     <!-- info about web app -->
     <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
     </center>
+    <button type="button" id="start">Judge me and my internet use</button>
   </body>
 </html>
