ignore changes probably

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -9,12 +9,14 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="web-breakz/static/home.css"/>
     <style type="text/css">a {text-decoration: none}</style>
-    <link rel="python" href="web-breakz/main.py"/>
-    <script src="static/timer.js"></script>    
+    <!-- <link rel="python" href="web-breakz/main.py"/> -->
+    <link rel="python" href="web-breakz/countdown.py"/>
+    <script src="../static/timer.js"></script>
   </head>
   <body>
     <center>
     <h1 id="title">Welcome to Web Breakz</h1>
+    <div id="clockdiv"></div>
 
     <!-- temp button w/ sound -->
     <!-- <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
@@ -41,6 +43,7 @@
 
     <!-- info about web app -->
     <h4>We want you to take breakz from the interwebs. Don't get us mad.</h4>
+
     </center>
   </body>
 </html>
