--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -44,8 +44,10 @@
 
     <!-- info about web app -->
     <h4 id="message">We want you to take breakz from the interwebs. Don't get us mad.</h4>
-    <div id="clockdiv">
-      'hours' 
+    <div class="clockdiv">
+      Hours: <span class="valueh"></span><br>
+      Minutes: <span class="valuem"></span><br>
+      Seconds: <span class="values"></span>
     </div>
     </center>
     <button type="button" id="start">Judge me and my internet use</button>
