--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -49,6 +49,7 @@
       Minutes: <span class="valuem"></span><br>
       Seconds: <span class="values"></span>
     </div>
+    <div> Until your next break </div>
     </center>
     <button type="button" id="start">Judge me and my internet use</button>
   </body>
