--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="homepage">
   <head>
     <title>wEb brEaKz</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
