--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -54,6 +54,6 @@
     </div>
     <div> Until your next break </div>
     </center>
-    <button type="button" id="start">Judge me and my internet use</button>
+    <button onclick="button_function()" id="start">Judge me and my internet use</button>
   </body>
 </html>
