--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -55,5 +55,6 @@
     <div> Until your next break </div>
     </center>
     <button onclick="button_function()" id="start">Judge me and my internet use</button>
+    <button onclick="stop_function()" id="stop">Stop this madness</button>
   </body>
 </html>
