--- a/web-breakz/static/home.css
+++ b/web-breakz/static/home.css
@@ -31,7 +31,7 @@ body {
 }
 
 /* button style */
-.start {
+#start {
   background-color: #2eb8b8;
   border: none;
   color: white;
@@ -43,6 +43,7 @@ body {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 8px;
+  outline: none;
 }
 
 /*#me {
