--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -54,7 +54,7 @@
     </div>
     <div> Until your next break </div>
     </center>
-    <button onclick="button_function()" id="start">Judge me and my internet use</button>
-    <button onclick="stop_function()" id="stop">Stop this madness</button>
+    <button onclick="button_function()" id="start">judge me and my internet use</button>
+    <button onclick="stop_function()" id="stop">stop this madness</button>
   </body>
 </html>
