--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -56,5 +56,6 @@
     </center>
     <button onclick="button_function()" id="start">judge me and my internet use</button>
     <button onclick="stop_function()" id="stop">stop this madness</button>
+    <a href="/about" class="button">Why am I here?</a>
   </body>
 </html>
