--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -50,10 +50,10 @@
     <div class="clockdiv">
     <table>
       <thead>
-        <tr>
-          <th>Hours: </th>
-          <th>Minutes: </th>
-          <th>Seconds: </th>
+        <tr id="hours">
+          <th>Hours </th>
+          <th>Minutes </th>
+          <th>Seconds </th>
         </tr>
       </thead>
       <tbody>
@@ -64,7 +64,7 @@
         </tr>
         <tfoot>
           <tr>
-            <td colspan='3'>Until your next break</tr>
+            <td colspan='3' id="hr">Until your next break</tr>
         </tfoot>
       </tbody>
     </table>
