--- a/web-breakz/templates/about.html
+++ b/web-breakz/templates/about.html
@@ -4,6 +4,9 @@
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <link rel="stylesheet" href="static/about.css"/>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <style type="text/css">a {text-decoration: none}</style>
 </head>
 <body>
   <h1 id="questions">What is Web Breakz?</h1>
@@ -24,6 +27,8 @@
      am too much of a procrastinator who loves to surf the web and ignore actual
      things in life that need to get done?</h1>
   <p id="answers">Well... sounds like you need some breakz.</p>
-  <a href="/" class="backHome">plz take me home</a>
+  <center>
+  <a href="/" class="button">plz take me home</a>
+</center>
 </body>
 </html>
