--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -73,9 +73,10 @@
     <center>
       <!-- <button onclick="button_function()" id="start">Judge me and my internet use</button> -->
     </center>
-
+  <center>
     <button onclick="button_function()" id="start">judge me and my internet use</button>
     <button onclick="stop_function()" id="stop">stop this madness</button>
     <a href="/about" class="button">why am I here?</a>
+  </center>
   </body>
 </html>
