trying to create a form

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -78,6 +78,14 @@
     <button onclick="button_function()" id="start">judge me and my internet use</button>
     <button onclick="stop_function()" id="stop">stop this madness</button>
     <a href="/about" class="button">why am I here?</a>
+    <br>
+    <br>
+    <form method="get" action="">
+      Hours: <input type="number" name="hours"><br>
+      Minutes: <input type="number" name="minutes"><br>
+      Seconds: <input type="number" name="seconds"><br>
+    <input type="submit" value="judge me and my internet use">
+</form>
   </center>
   </body>
 </html>
