--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -75,16 +75,16 @@
     </center>
     <br>
   <center>
-    <button onclick="button_function()" id="start">judge me and my internet use</button>
+    <!-- <button onclick="button_function()" id="start">judge me and my internet use</button> -->
     <button onclick="stop_function()" id="stop">stop this madness</button>
     <a href="/about" class="button">why am I here?</a>
     <br>
     <br>
     <form method="get" action="">
-      Hours: <input type="number" name="hours"><br>
-      Minutes: <input type="number" name="minutes"><br>
-      Seconds: <input type="number" name="seconds"><br>
-    <input type="submit" value="judge me and my internet use">
+      Hours: <input type="number" name="hours" min="0"><br>
+      Minutes: <input type="number" name="minutes" min="0"><br>
+      Seconds: <input type="number" name="seconds" min="0"><br>
+    <input type="submit" onclick="buttonfunction()" id="start" value="judge me and my internet use">
 </form>
   </center>
   </body>
