removed seconds from form

--- a/web-breakz/templates/home.html
+++ b/web-breakz/templates/home.html
@@ -82,8 +82,7 @@
     <br>
     <form method="get" action="">
       Hours: <input type="number" name="hours" min="0"><br>
-      Minutes: <input type="number" name="minutes" min="0"><br>
-      Seconds: <input type="number" name="seconds" min="0"><br>
+      Minutes: <input type="number" name="minutes" min="0"><br><br>
     <input type="submit" onclick="buttonfunction()" id="start" value="judge me and my internet use">
 </form>
   </center>
